--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -20,11 +20,8 @@
         <td>{{article.author}}</td>
         <td>{{article.create_date}}</td>
         <td><a href="edit_article/{{article.id}}" class="btn btn-default pull-right">Edit</a></td>
-        <td>
-          <form action="{{url_for('delete_article', id=article.id)}}" method="post">
-            <input type="hidden" name="_method" value="DELETE">
-            <input type="submit" value="Delete" class="btn btn-danger">
-          </form>
+        <td><a href="deletey/{{article.id}}" class="btn btn-danger">delete</a></td>
+
         </td>
       </tr>
     {% endfor %}
